[package]
name = "minidnf"
version = "0.1.0"
edition = "2024"

[dependencies]
dnf5daemon = { path = "../rust_dnf5daemon/" }
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
termion = "4.0.5"
tokio = { version = "1.48.0", features = ["macros"] }
futures-util = "0.3.31"
zbus = "5.12.0"
